# iCub-vision-teleoperation

./: README.md
human-dynamics-estimation-vision/: CMakeLists.txt
human-dynamics-estimation-vision/HumanDynamicsEstimationLibrary/: CTestTestfile.cmake  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/HumanDynamicsEstimationLibrary/algorithms/: CTestTestfile.cmake  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/HumanDynamicsEstimationLibrary/utils/: CTestTestfile.cmake  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/conf/: CTestTestfile.cmake  HDE-yarpmanager.ini  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/conf/app/: HumanStateVisualizer_ergoCub_openxr_ifeel.ini  HumanStateVisualizer_iCub2_5_openxr.ini  HumanStateVisualizer_iCub2_5_openxr_ifeel.ini  HumanStateVisualizer_iCub3_openxr.ini  HumanStateVisualizer_iCub3_openxr_ifeel.ini
human-dynamics-estimation-vision/conf/xml/: HumanStateProvider.xml  RobotPositionController_iCub.xml  RobotPositionController_iCub2_5.xml  RobotStateProvider_iCub2_5.xml  humanSubject01_66dof.urdf
human-dynamics-estimation-vision/devices/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/devices/HumanControlBoard/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  yarp_plugin_human_control_board.cpp
human-dynamics-estimation-vision/devices/HumanDynamicsEstimator/: CTestTestfile.cmake  Makefile  cmake_install.cmake  yarp_plugin_human_dynamics_estimator.cpp
human-dynamics-estimation-vision/devices/HumanStateProvider/: CMakeLists.txt  HumanStateProvider.cpp  HumanStateProvider.h  yarp_plugin_human_state_provider.cpp
human-dynamics-estimation-vision/devices/HumanStateProviderOrig/: CMakeCache.txt  CMakeLists.txt
human-dynamics-estimation-vision/devices/HumanWrenchProvider/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  yarp_plugin_human_wrench_provider.cpp
human-dynamics-estimation-vision/interfaces/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/interfaces/IVisionTargets/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/interfaces/IVisionTargets/hde/interfaces/: IVisionTargets.h
human-dynamics-estimation-vision/lib/: libHumanDynamicsEstimation_utils.so.2.7.1
human-dynamics-estimation-vision/modules/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/msgs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/msgs/ros/: Makefile  (+2 more)
human-dynamics-estimation-vision/others/: HumanStateVisualizer.ini
human-dynamics-estimation-vision/publishers/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/remappers/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/wrappers/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
human-dynamics-estimation-vision/wrappers/VisionTargetsWrapper/: CMakeLists.txt  CTestTestfile.cmake  Makefile  VisionTargetsWrapper.cpp  VisionTargetsWrapper.h  cmake_install.cmake  yarp_plugin_vision_targets_wrapper.cpp
vision-system/: requirements.txt
vision-system/asynchronous/: calculate_joint_angles.py  record_pose_kp.py
vision-system/real-time/: webcam_vector_write_port_inv.py  webcam_vector_write_port_inv_enc.py
(+83 files in other folders)
